--- a/CashRefill/Resources/pl.lproj/Localizable.strings
+++ b/CashRefill/Resources/pl.lproj/Localizable.strings
@@ -29,10 +29,19 @@
 "Back" = "Cofnij";
 
 /* No comment provided by engineer. */
-"Change Currency" = "Zmień walutę";
+"Change currency" = "Zmień walutę";
+
+/* No comment provided by engineer. */
+"Change currency 💰" = "Zmień walutę 💸";
+
+/* No comment provided by engineer. */
+"Change language" = "Zmień język 🇵🇱";
 
 /* No comment provided by engineer. */
 "Created: " = "Stworzono:";
+
+/* No comment provided by engineer. */
+"Donate to us in Cryptocurrency!" = "Pomóż nam wpłacając kryptowaluty!";
 
 /* No comment provided by engineer. */
 "Edit your list item:" = "Edytuj swój wpis:";
@@ -41,7 +50,10 @@
 "Goal" = "Cel";
 
 /* No comment provided by engineer. */
-"Goalie is Currently supporting three Currencies:\n🇵🇱 Polish zloty PLN\n🇺🇸 US Dollar $\n🇪🇺 European Euro €\n\nTo change currency follow this steps:\n\n⚙️ Open Settings App on your device.\n🔍 Search for \"Language & Region\"\n🌍 Change Region to country that uses Currency you want!" = "Goalie wspiera obecnie trzy waluty:\n🇵🇱 Polski złoty - PLN\n🇺🇸 Dolar Amerykański - $\n🇪🇺 Euro - €\n\nAby zmienić walutę podążaj za poniższymi instrukcjami:\n\n⚙️ Na swoim urządzeniu otwórz aplikację Ustawienia.\n🔍 Wyszukaj \"Język i Region\" lub kliknij w opcje \"Ogólne\", ustawienie języka i regionu powinno znajdować się na liście.\n🌍 Zmień region na kraj, którego walutę chcesz używać (Niemcy - Euro, USA - Dolar)\n\nUstawienie nie zmieni języku aplikacji ani telefonu, natomiast może zmienić się format daty oraz czasu i dystansów (np przy zmienie na USA : \n12 godzinny format czasu, MM/DD/RRRR, Mile zamiast kilometrów)\nW ustawieniach można ustawić z powrotem polskie wartości, lecz może być to trudne dla niektórych użytkowników. Pomoc można znaleźć w internecie.";
+"Goalie is currently supporting three languages:\n\n🇺🇸 English\n🇵🇱 Polish\n🇩🇪 German\n\nTo change language go to Settings app, search for Goalie. You will see a setting to change app language.\n" = "Goalie wspiera obecnie trzy języki:\n\n🇺🇸 Angielski\n🇵🇱 Polski\n🇩🇪 Niemiecki\n\nŻeby zmienić język, otwórz aplikacje ustawienia i wyszukaj \"Goalie\". Po kliknięciu zobaczysz możliwość zmiany języka.";
+
+/* No comment provided by engineer. */
+"Help us to improve Goalie!" = "Pomóż nam ulepszyć Goalie!";
 
 /* No comment provided by engineer. */
 "History 🕰" = "Historia 🕰";
@@ -50,10 +62,13 @@
 "How much do you want to save?" = "Ile chcesz zaoszczędzić?";
 
 /* No comment provided by engineer. */
-"Instead of spending money on things you don't really need, save them for something you really care about." = "Zamiast wydawać pieniądze na rzeczy, których naprawdę nie potrzebujesz, oszczędź je na coś na czym ci bardzo zależy.";
+"Instead of spending money on things you don't really need, save them for something you really care about." = "Zamiast wydawać pieniądze na rzeczy, których naprawdę nie potrzebujesz, oszczędź je na coś na czym ci bardzo zależy. 🥳🥰😎";
 
 /* No comment provided by engineer. */
 "Item:" = "Rzecz:";
+
+/* No comment provided by engineer. */
+"Minimalist theme" = "Minimalistyczne tło";
 
 /* No comment provided by engineer. */
 "Oh, no! 😰😱🥶" = "Och, nie! 😰😱🥶";
@@ -92,7 +107,16 @@
 "SUBMIT YOUR CHANGES 👍" = "POTWIERDŹ ZMIANY 👍";
 
 /* No comment provided by engineer. */
+"Support Goalie 💕" = "Wesprzyj Goalie 💕";
+
+/* No comment provided by engineer. */
 "There is nothing on your list. Press + to add new item. 😱😨😰" = "Na twojej liście nic nie ma! Naciśnij + i dodaj nową rzecz. 😱😨😰";
+
+/* No comment provided by engineer. */
+"To change currency follow this steps:\n\n⚙️ Open Settings App on your device.\n🔍 Search for \"Language & Region\"\n🌍 Change Region to country that uses Currency you want!\n\nChanging region may affect the format of dates and distances on your phone. However you can allways change them back manually." = "Jeśli chcesz zmienić walutę, podążaj za poniższymi instrukcjami:\n\n⚙️ Na swoim urządzeniu otwórz aplikację Ustawienia.\n🔍 Wyszukaj \"Język i Region\" lub kliknij w ustawienia \"Ogólne\", szukana opcja będzie na liście ustawień.\n🌍 Zmień region na kraj którego walutę chcesz używać.\n\n❗️Zmiana regionu może wpłynąć na sposób wyświetlania daty oraz zmienić jednostki odległości oraz temperatury. \nPolskie jednostki można ustawić z powrotem ręcznie w ustawieniach.\n\nZmiana regionu nie wpływa na zmianę języka urządzenia.";
+
+/* No comment provided by engineer. */
+"We are working hard, all the time to make Goalie better. 💪\n📢 However we decided to make Goalie totally free and ad-free because we know how anoying it would be to use app like that. 🤑\n\nIf you would like to support ❤️ us you can send us some Cryptocurrency - tapp currency to copy our wallet adress to clipboard. 📋\n\nWe need funds to pay for Apple Development system - basically it allows us to make app avialable on App Store and further expences will grow along with app inprovements. 🧑‍💻\n\nThanks to any one who decided to support us 💕" = "Ciągle pracujemy nad Goalie wprowadzając nowe funkcje oraz polepszając wasze doświadczenie. 💪\n📢 Mimo tego Goalie pozostaje wolne od reklam oraz całkowicie darmowe, ponieważ wiemy że reklamy lub opłaty mógły by pogorszyć jakość aplikacji. 🤑\n\nJeśli zechciałbyś/abyś nas wesprzeć ❤️ możesz wysłać nam wybrane kryptowanuty - kliknij w nazwę waluty aby skopiować adres naszego portfela. 📋\n\nPotrzebujemy funduszy aby opłacać możliwość wystawiania aplikacji w App Store oraz na nadchodzące wydatki, które pojawią się wraz z rozwojem aplikacji (m. in. płatne API) 🧑‍💻\n\nOgromnie dziękujemy wszystkim którzy zdecydowali się nas wesprzeć 💕";
 
 /* No comment provided by engineer. */
 "Your current goal is %@" = "Twój cel wynosi %@";
